TROUV-148 Fix : Discounted Price Not Showing in Trip Details Page

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,3 +2,6 @@
 body {
   zoom: 0.75;
 }
+section {
+  background-attachment: fixed;
+}
